fixed loader animation z-index

--- a/css/style.css
+++ b/css/style.css
@@ -41,6 +41,11 @@ button {
   margin-top: 25px;
 }
 
+button:hover {
+  background: linear-gradient(193.33deg, #a16be0 -11.44%, #ff93e1 123.93%);
+  box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.5);
+}
+
 .loading-window {
   position: fixed;
   display: block;
@@ -50,19 +55,19 @@ button {
   left: 0;
   right: 0;
   bottom: 0;
-  background-color: white;
-  opacity: 0;
-  z-index: 1;
-  animation: opacity 3s linear 0s 1;
+  background-color: rgba(255, 255, 255, 0.8);
+  animation: opacity 3s linear 0s 1 normal forwards;
 }
 @keyframes opacity {
   0% {
-    opacity: 0.8;
+    z-index: 1;
   }
   99% {
-    opacity: 0.8;
+    z-index: 1;
+    opacity: 1;
   }
   100% {
+    z-index: -10;
     opacity: 0;
   }
 }
@@ -76,8 +81,9 @@ button {
   border-radius: 50%;
   border-bottom-color: transparent;
   right: calc(50% - 50px);
-  top: 30%;
-  animation: rotation 1s linear 0s 3;
+  top: 40%;
+  display: block;
+  animation: rotation 1s linear 0s 3 normal forwards;
 }
 @keyframes rotation {
   0% {
