--- a/sass/base/_animations.scss
+++ b/sass/base/_animations.scss
@@ -1,5 +1,5 @@
 @mixin rotation {
-    animation: rotation 1s linear 0s 3;
+    animation: rotation 1s linear 0s 3 normal forwards;
     @keyframes rotation {
         0% {
             transform: rotate(0deg);
@@ -10,16 +10,19 @@
     }
 }
 
+
 @mixin opacity {
-    animation: opacity 3s linear 0s 1;
+    animation: opacity 3s linear 0s 1 normal forwards;
     @keyframes opacity {
         0% {
-            opacity: 0.8;
+            z-index: 1;
         }
         99% {
-            opacity : 0.8;
+            z-index: 1;
+            opacity: 1;
         }
         100% {
+            z-index: -10;
             opacity: 0;
         }
     }
