--- a/sass/components/_buttons.scss
+++ b/sass/components/_buttons.scss
@@ -1,3 +1,5 @@
+@use '../abstracts/variables' as v;
+
 button {
     background: linear-gradient(193.33deg, #9356DC -11.44%, #FF79DA 123.93%);
     box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.25);
@@ -14,4 +16,14 @@ button {
     border: none;
     margin-bottom: 50px;
     margin-top: 25px;
+    // &:hover {
+    //     background: linear-gradient(193.33deg, lighten(#9356DC, 5%) -11.44%, lighten(#FF79DA, 5%) 123.93%);
+    // }
+}
+
+
+
+button:hover {
+    background: linear-gradient(193.33deg, lighten(#9356DC, 5%) -11.44%, lighten(#FF79DA, 5%) 123.93%);
+    box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.5);
 }
